assets/stylesheets/application.scss
@import 'bourbon';
@import "globals/variables";
@import "components/reset";
@import url(http://fonts.googleapis.com/css?family=Arvo);

html {
	//border-left: 4px solid $link-color;
}

nav.header {
	max-width: $max-width;
	margin: 2.5em auto 4em auto;
	font-family: 'Arvo';

	& .banner-container {
		border-bottom: 2px solid $title-color;
		width: 100%;

		& .banner {
			font-size: 2.5em;
			display: inline-block;
		}

		& .banner-search {
			background-color: rgba(0, 0, 0, 0);
			display: inline-block;
			margin-top: 8px;
			float: right;

			& input.search {
				text-align: right;
				border-bottom: none;

				&:focus {
					border-bottom: none;
				}
			}
		}
	}

	& .search {
		border-radius: 0;
		display: none;
		padding-top: 8px;

		& input.search {
			padding: 5px;
			color: $link-color;

			border: 0;
			border-bottom: 1px solid $gray-color;
			outline-width: 0;

			font-family: $body-font;
			font-size: inherit;

			&::-webkit-input-placeholder{
				color: $gray-color;
			}
			&::-moz-placeholder {
				color: $gray-color;
			}
			&:-moz-placeholder {
				color: $gray-color;
			}

			&:focus {
				border-bottom: 1px solid $link-color;

				&::-webkit-input-placeholder {
					color: $link-color;
				}
				&::-moz-placeholder {
					color: $link-color;
				}
				&:-moz-placeholder {
					color: $link-color;
				}
			}
		}
	}

	& .navigation {
		float: right;
		text-align: right;
		padding-top: 8px;

		& a {
			display: inline-block;
			margin-left: 20px; // 40
			font-size: 1.4em;

			& h2 {
				line-height: 1.3em;
			}
		}
	}

	& a {
		color: $title-color;
		line-height: 1.25em;

		&:hover {
			color: $link-color;
			border-bottom: 0px;
		}
	}
}

body {
	padding: 0 15px;
	color: $text-color;
	background: #fff;
	font-family: $body-font;
	font-size: 17px;
}

section {
	max-width: $max-width;
	margin: 0 auto;
	clear: both;
}

a {
	text-decoration: none;
	color: $link-color;

	&:hover {
		border-bottom: 1px solid;
	}
}

p {
	margin: 0.5em 0;

	&.no-margin {
		margin: 0;
	}
}

em {
	font-style: italic;
}

.quote {
	text-align: center;
	font-weight: 300;
	font-style: italic;
	font-family: $body-font;
}

mark {
	border-radius: 2px;
	background-color: #fffdcc;
	font-style: normal;

	&.search {
		padding: 0 0.1em 0 0.1em;
		border-radius: 2px;
		//background-color: #fff0f4;
		background-color: $link-color;
		color: $background-color;
		font-style: normal;
	}
}

strong {
	font-weight: 600;
}

a {
	@include transition(color, 0.3s);
	@include transition(border, 0.3s);
}

footer {
	max-width: $max-width;
	margin: 3.5em auto 1em;
	text-align: center;
	color: $gray-color;
	line-height: 2em;

	& .copyright {
		margin-bottom: 0.5em;
	}

	& a {
		color: $link-color;

		& .fa {
			margin-left: 10px;
			font-size: 1.3em;
		}

		&:hover {
			color: $link-color;
			border-bottom: none;
		}
	}

	&.privacy-policy {
		margin: 1em auto;
	}
}

@media screen and (max-width: 570px) {
	nav.header {
		& .navigation {
			& a {
				margin-left: 12px;
			}
		}
	}
}


//@media all and (max-width: 700px) {
//	.quote {
//		display: none;
//	}
//}

@media screen and (max-width: 482px) {
	nav.header {
		text-align: center;
		margin-bottom: 1.2em;

		& .banner-container {
			& .banner {
				float: none;
			}

			& form.banner-search {
				display: none;
			}
		}

		& form.search {
			display: block;
			float: left;
			padding-top: 4px;
			margin-bottom: 30px;
		}
	}
}

@media screen and (max-width: 430px) {
	img.project-screenshot {
		display: none;
	}
}

@media screen and (max-width: 356px) {
	nav.header {
		font-size: 1em;
	}
}

@media screen and (max-width: 330px) {
	nav.header {
		font-size: 0.9em;
	}
}


@import "components/syntax";
@import "components/pygments";
@import "components/pagination";
@import "sections/posts";

